--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-geocoder": "^4.2.0",
     "slugify": "^1.6.6"
   },
